<resources>
    *App Info
    <string name="app_name">LOL STATS</string>
    <string name="title">Welcome to LOL Summoner\'s Finder</string>

    *Main Components
    <string name="search_button">Search Summoner</string>
    <string name="enter_name">Enter Summoner\'s Name</string>

    *Setting Menu
    <string name="change_region">Change Region</string>
    <string name="main_setting">Settings</string>
    <string name="nav_home">Home</string>
    <string name="nav_search">Search</string>
    <string name="nav_saved_summoner">Favorites</string>
    <string name="nav_change_region">Change Region</string>

    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>

    <string name="search_for_history">View Last 20 Match History</string>
    <string name="Loading">Can\'t execute, check network</string>
    <string name="summoner_detail_level">Level:</string>
    <string name="summoner_detail_name">Name:</string>
    <string name="summoner_detail_rank">Rank:</string>

    <string name="rank_less">Un ranked</string>
    <string name="top_2">TOP2 Champion</string>
    <string name="top_1">TOP1 Champion</string>
    <string name="top_3">TOP3 Champion</string>
    <string name="mastery_prompt">Mastery:</string>
    <string name="icon_content">ICON</string>

    <string name="pref_user_key" translatable="false">pref_user</string>

    <!-- Strings for sort-by preference -->
    <string name="pref_sort_key" translatable="false">NA.</string>
    <string name="pref_sort_title">Change your Server</string>
    <string name="pref_sort_entry_JP">Japan</string>
    <string name="pref_sort_entry_KR">Korea</string>
    <string name="pref_sort_entry_BR">Brazil</string>
    <string name="pref_sort_entry_RU">Russia</string>
    <string name="pref_sort_entry_US">US</string>
    <string name="pref_sort_value_JP" translatable="false">JP1.</string>
    <string name="pref_sort_value_KR" translatable="false">KR.</string>
    <string name="pref_sort_value_BR" translatable="false">BR1.</string>
    <string name="pref_sort_value_RU" translatable="false">RU.</string>
    <string name="pref_sort_value_US" translatable="false">NA1.</string>
    <string name="pref_sort_default" translatable="false">@string/pref_sort_value_US</string>
    <string name="pref_user_title">Hello summoner</string>
    <string name="free_champs">Free Champs</string>
    <string name="news">NEWS</string>
    <string name="store_sales">STORE SALES</string>
    <string name="live">LIVE</string>
    <string name="summoner_s_drift">Summoner\'s drift</string>
    <string name="tft_mode">TFT Mode</string>
    <string name="view_last_20_tft_match_histories">VIEW LAST 20 TFT MATCH HISTORIES</string>
    <string name="tft_status_coming_soon">TFT Status Coming Soon</string>
    <string name="last_revision_date">Last Revision Date:</string>


</resources>
