<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/myTFTbutton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_last_20_tft_match_histories" />

        <RelativeLayout
            android:id="@+id/tft_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="16dp">

        <ImageView
            android:id="@+id/iv_mytftIcon"
            android:layout_width="200dp"
            android:layout_height="170dp"
            android:src="@drawable/teamfighttactics"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iv_mytftIcon"
            android:layout_toEndOf="@+id/iv_mytftIcon"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:id="@+id/tftlevel"
            android:text="@string/tft_status_coming_soon"
            android:layout_marginStart="20dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iv_mytftIcon"
            android:layout_toEndOf="@+id/iv_mytftIcon"
            android:layout_below="@+id/tftlevel"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:id="@+id/tftrevisiondate"
            android:text="@string/last_revision_date"
            android:layout_marginStart="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iv_mytftIcon"
            android:layout_toEndOf="@+id/iv_mytftIcon"
            android:layout_below="@+id/tftrevisiondate"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:id="@+id/tftmydate"
            android:layout_marginStart="20dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/iv_mytftIcon"
                android:src="@drawable/bcktft"

                />
    </RelativeLayout>
</LinearLayout>
</LinearLayout>